# Wifi_Scout

./: .gitignore  BRANDING_COMPLETE.md  BRANDING_UPDATE.md  CLEANUP_COMPLETE.md  CRITICAL_ISSUES_FIXED.md  DIRECTORY_STRUCTURE.md  EXECUTIVE_SUMMARY.md  GETTING_STARTED.md  IMPROVEMENTS_COMPLETE.md  MIGRATION_GUIDE.md  PRODUCTION_READY.md  QUICK_REFERENCE_IMPROVEMENTS.md  README.md  SCRIPTS_UPDATED.md  VERSION_2.2.9_RELEASE.md  install.bat  install.sh  network_suite.py  pyproject.toml  requirements.txt  run_wifi_scout.bat  run_wifi_scout.sh
.github/workflows/: ci.yml
archive/: test_security.py  test_wa.py  wa.py
core/: utilities.py  wifi_engine.py
docs/: AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG_v3.0.1.md  CLEANUP_SUMMARY.md  CRITICAL_CRASH_FIX.md  CRITICAL_FIXES.md  FIXES_APPLIED.md  IMPLEMENTATION_LOG.md  LAN_SCANNER_TEST_GUIDE.md  MODULAR_ARCHITECTURE.md  PROJECT_COMPLETE.md  PROJECT_STRUCTURE.txt  PROMPT1_COMPLETE.md  PROMPT2_COMPLETE.md  PROMPT3_COMPLETE.md  PROMPT4_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIXES.md  SECURITY_REFERENCE.md  TESTING_GUIDE.md
mods/: __init__.py  arp_tool.py  dns_tool.py  example_tool.py  http_tool.py  interfaces_tool.py  lan_scan_tool.py  ping_tool.py  route_tool.py  traceroute_tool.py
tests/: __init__.py  test_cli.py  test_integration.py  test_plugin_loader.py  test_wifi_engine.py
