[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "network-scout"
version = "2.2.9"
description = "A secure, cross-platform network diagnostic suite with modular architecture"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Network Scout Contributors"}
]
keywords = ["wifi", "network", "diagnostics", "scanner", "networking", "ping", "dns", "traceroute"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]

# Core dependencies - minimal install (CLI works without GUI)
dependencies = [
    # No hard dependencies - all features are optional with graceful fallback
]

[project.optional-dependencies]
# GUI support
gui = [
    "PyQt6>=6.4.0",
]

# Visualization and charting
viz = [
    "matplotlib>=3.5.0",
]

# Enhanced network tools
network = [
    "dnspython>=2.3.0",
    "psutil>=5.9.0",
]

# Full feature set (recommended)
full = [
    "PyQt6>=6.4.0",
    "matplotlib>=3.5.0",
    "dnspython>=2.3.0",
    "psutil>=5.9.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# All dependencies including dev
all = [
    "PyQt6>=6.4.0",
    "matplotlib>=3.5.0",
    "dnspython>=2.3.0",
    "psutil>=5.9.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
# Console entrypoints for easy CLI access
network-scout = "network_suite:cli_main"
wifi-scout = "network_suite:cli_main"
ns = "network_suite:cli_main"

[project.urls]
Homepage = "https://github.com/yourusername/Wifi_Scout"
Documentation = "https://github.com/yourusername/Wifi_Scout/blob/main/README.md"
Repository = "https://github.com/yourusername/Wifi_Scout"
Issues = "https://github.com/yourusername/Wifi_Scout/issues"

[tool.setuptools]
packages = ["core", "mods"]
py-modules = ["network_suite"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | archive
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "PyQt6.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
